2019-06-24  Pumidon Phathong  <pumidon@hot-now.com>
 GET requests that don't check the body content now return the response body.
 
2019-06-14  Kirit Saelensminde  <kirit@felspar.com>
 Object APIs can now process JSON arrays into a separate table.

2019-03-07  Kirit Saelensminde  <kirit@felspar.com>
 Add a new view to retry Postgres serialisation errors.

2019-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Add a request logging middleware that stores the per-request log to the database.

2019-02-07  Tle Ekkul  <e.aryuth@gmail.com>
 fostgres.sql supporting precondition

2019-02-05  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug in the HTTP tests not doing name look ups correctly.

2019-01-22  Kirit Saelensminde  <kirit@felspar.com>
 Add debug logging of the database JSON schema loader.

2019-01-15  Tle Ekkul  <e.aryuth@gmail.com>
 * Add fostgres.control.pg-error view
 * Add fostgres-tests

2019-01-03  Tle Ekkul  <e.aryuth@gmail.com>
 POST support configuration as an array

2018-09-19  Kirit Saelensminde  <kirit@felspar.com>
 Extend schema validation to fields and CSJ.

2018-08-11  Kirit Saelensminde  <kirit@felspar.com>
 * Add JSON schema validation for object `PUT` and `PATCH`.
 * Fix the order of the expected & actual results for object request.
 * Fix a bug in the HTTP request checking where expressions would be resolved twice.

2018-07-11  Tle Ekkul  <e.aryuth@gmail.com>
 Add fg quote function

2018-06-11  Kirit Saelensminde  <kirit@felspar.com>
 Add support for `password` configuration on the connection strings.

2018-05-15  Kirit Saelensminde  <kirit@felspar.com>
 Allow database connection string settings to come from the environment.

2017-12-13  Kirit Saelensminde  <kirit@felspar.com>
 Fix the fg parser to allow whitspace and comments in more places.

2017-10-08  Kirit Saelensminde  <kirit@felspar.com>
 * Add scripting call `setting` for manipulating settings.
 * Add parser support for all JSON atom values.
