@@ -46,6 +46,30 @@ namespace {
         }
         return fostlib::null;
     }
+
+    fostlib::nullable<fostlib::json> call_datum(
+            const fostlib::string &name,
+            const fostlib::json &defn,
+            const std::vector<fostlib::string> &arguments,
+            const fostlib::json &row,
+            const fostlib::http::server::request &req) {
+        auto logger = fostlib::log::debug(fostgres::c_fostgres);
+        logger("", "Datum lookup")("in", "name", name)("in", "defn", defn)(
+                "in", "row", row);
+        if (defn["type"] == c_file) {
+            return fostgres::file_upload(name, defn, row);
+        } else if (defn["source"].isnull()) {
+            if (row.has_key(name)) {
+                logger("found", "name", name);
+                logger("found", "value", row[name]);
+                return row[name];
+            }
+            logger("not-found", name);
+        } else { 
+            return proc_datum(defn["source"], arguments, row, req);
+        }
+        return fostlib::null;
+    }
 }
 
 
@@ -69,28 +93,13 @@ fostlib::nullable<fostlib::json> fostgres::datum(
         const std::vector<fostlib::string> &arguments,
         const fostlib::json &row,
         const fostlib::http::server::request &req) {
-    auto logger = fostlib::log::debug(fostgres::c_fostgres);
-    logger("", "Datum lookup")("in", "name", name)("in", "defn", defn)(
-            "in", "row", row);
-    if (defn["type"] == c_file) {
-        return file_upload(name, defn, row);
-    } else if (defn["source"].isnull()) {
-        if (row.has_key(name)) {
-            logger("found", "name", name);
-            logger("found", "value", row[name]);
-            return row[name];
-        }
-        logger("not-found", name);
-    } else { 
-        auto value =  proc_datum(defn["source"], arguments, row, req);
-        if(not value) return value;
-        auto const str = fostlib::coerce<std::optional<f5::u8view>>(value.value());
-        if(str && defn["trim"] != fostlib::json(false)) {
-            auto result = fostlib::coerce<std::optional<fostlib::json>>(fostlib::trim(str));
-            return result;
-        } else {
-            return value;
-        }
+    auto value = call_datum(name, defn, arguments, row, req);
+    if(not value) return value;
+    auto const str = fostlib::coerce<std::optional<f5::u8view>>(value.value());
+    if(str && defn["trim"] != fostlib::json(false)) {
+        auto result = fostlib::coerce<std::optional<fostlib::json>>(fostlib::trim(str));
+        return result;
+    } else {
+        return value;
     }
-    return fostlib::null;
 }
